--- a/sportmates_frontend/app/src/main/res/values/strings.xml
+++ b/sportmates_frontend/app/src/main/res/values/strings.xml
@@ -6,14 +6,20 @@
     <string name="sportmates_profile">SportMates - Saját profil</string>
     <string name="sportmates_my_events">SportMates - Eseményeim</string>
     <string name="nav_header_welcome">Üdvözöllek Sporttárs</string>
+    <string name="main_nearby_events">Közelben lévő események</string>
+
     <string name="event_activity_header">Eseményeim</string>
+
+    <string name="event_details_header">Esemény részletei</string>
     <string name="event_name">Esemény neve</string>
     <string name="event_audience">Melyik nem csatlakozhat</string>
     <string name="event_start_date">Esemény kezdete</string>
     <string name="event_end_date">Esemény vége</string>
     <string name="event_price">Ár</string>
+    <string name="event_headcount">Létszám</string>
     <string name="event_locale">Helyszín</string>
     <string name="event_description">Leírás</string>
+
     <string name="profile_activity_header">Adataim</string>
     <string name="profile_name">Név</string>
     <string name="profile_username">Felhasználónév</string>
@@ -22,6 +28,7 @@
     <string name="profile_city">Lakhely</string>
     <string name="profile_gender">Nem</string>
     <string name="profile_phone_number">Telefonszám</string>
+
     <string name="nav_menu_profile">Profil beállításai</string>
     <string name="nav_menu_my_events">Eseményeim</string>
     <string name="nav_menu_add_new_event">Új esemény hozzáadása</string>
