--- a/sportmates_frontend/app/src/main/res/values/strings.xml
+++ b/sportmates_frontend/app/src/main/res/values/strings.xml
@@ -37,8 +37,7 @@
     <string name="profile_username">Felhasználónév</string>
     <string name="profile_email">Email</string>
     <string name="profile_birthdate">Születési idő</string>
-    <string name="profile_city">Lakhely</string>
-    <string name="profile_gender">Nem</string>
+    <string name="profile_locale">Lakhely</string>
     <string name="profile_phone_number">Telefonszám</string>
 
     <string name="nav_menu_profile">Profil beállításai</string>
